# Projet_Webscraping_Api.cv

./: .gitignore  README.md  app.py  cookies.pkl  liste_proxy.csv  proxy.xlsx  pyproject.toml  scraping.ipynb
functions/: functions_trustpilot.py  functions_yelp.py
functions/API/: main.py
functions/generator/: response_generator.py
functions/scrapping/: functions_amazon.py  functions_app_store.py  functions_google_reviews.py  functions_play_store.py  functions_trustpilot.py  functions_yelp.py
