[project]
name = "projet-webscraping-api"
version = "0.1.0"
description = ""
authors = [
    {name = "JOREL531",email = "feussijorel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "googlemaps (>=4.10.0,<5.0.0)",
    "selenium (>=4.39.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
