[project]
name = "projet-webscraping-api"
version = "0.1.0"
description = ""
authors = [
    {name = "JOREL531",email = "feussijorel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "googlemaps (>=4.10.0,<5.0.0)",
    "selenium (>=4.39.0,<5.0.0)",
    "undetected-chromedriver (>=3.5.5,<4.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "python3-distutils (>=0.0.1,<0.0.2)",
    "bs4 (>=0.0.2,<0.0.3)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "bitsandbytes (>=0.49.0,<0.50.0)",
    "gpt4all (>=2.8.2,<3.0.0)",
    "langdetect (>=1.0.9,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
